--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name - Personal Website</title>
+  <title>Sophia Tamburrino - Personal Website</title>
   <!-- Bootstrap CSS -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom styles -->
@@ -25,7 +25,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Your Name</a>
+      <a class="navbar-brand" href="#">Sophia Tamburrino</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -48,8 +48,8 @@
   <!-- Header (Jumbotron) -->
   <header class="jumbotron jumbotron-fluid">
     <div class="container text-center">
-      <h1 class="display-4">Your Name</h1>
-      <p class="lead">Web Developer | Designer | Thinker</p>
+      <h1 class="display-4">Sophia Tamburrino</h1>
+      <p class="lead">Software Engineer | Web Designer | Student</p>
     </div>
   </header>
 
@@ -59,7 +59,7 @@
       <div class="row">
         <div class="col-lg-6">
           <h2 class="mb-4">About Me</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis libero ac ligula viverra malesuada.</p>
+          <p></p>
           <p>Etiam dapibus lacus nec elit pulvinar, non dictum mauris interdum.</p>
         </div>
         <div class="col-lg-6">
