--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <div class="container text-center">
       <h1 class="display-4">Sophia Tamburrino</h1>
       <p class="lead">Software Engineer | Web Designer | Student</p>
+      <a href="path/to/your-resume.pdf" target="_blank">Download My Resume</a>
     </div>
   </header>
 
