--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     .jumbotron {
       background-image: url('your-background-image.jpg'); /* Replace with your background image */
       background-size: cover;
-      color: #fff;
+      color: #af33ff;
       text-shadow: 2px 2px 4px #000000;
     }
   </style>
@@ -50,7 +50,7 @@
     <div class="container text-center">
       <h1 class="display-4">Sophia Tamburrino</h1>
       <p class="lead">Software Engineer | Web Designer | Student</p>
-      <a href="path/to/your-resume.pdf" target="_blank">Download My Resume</a>
+      <a href="New-Current-Resume-Tamburrino.pdf" target="_blank">Download My Resume</a>
     </div>
   </header>
 
@@ -64,7 +64,7 @@
           <p>Etiam dapibus lacus nec elit pulvinar, non dictum mauris interdum.</p>
         </div>
         <div class="col-lg-6">
-          <img src="profile-picture.jpg" class="img-fluid rounded-circle" alt="Your Profile Picture">
+          <img src="IMG_9326.jpg" class="img-fluid rounded-circle" alt="Your Profile Picture">
         </div>
       </div>
     </div>
