--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <p>Etiam dapibus lacus nec elit pulvinar, non dictum mauris interdum.</p>
         </div>
         <div class="col-lg-6">
-          <img src="IMG_9326.jpg" class="img-fluid rounded-circle" alt="Your Profile Picture">
+          <img src="PersonalWebsite/IMG_9326.JPG" class="img-fluid rounded-circle" alt="Your Profile Picture">
         </div>
       </div>
     </div>
