--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
   <!-- Header (Jumbotron) -->
   <header class="jumbotron jumbotron-fluid">
     <div class="container text-center">
-      <div class="text-bg-dark p-3"><h1 class="display-4">Sophia Tamburrino</h1>
-      <p class="lead">Software Engineer | Web Designer | Student</p>
-      <a href="New-Current-Resume-Tamburrino.pdf" target="_blank">Download My Resume</a></div>
+      <h1 class="text-bg-dark p-3" class="display-4">Sophia Tamburrino</h1>
+      <p class="lead"class="text-bg-dark p-3">Software Engineer | Web Designer | Student</p>
+      <a href="New-Current-Resume-Tamburrino.pdf" target="_blank">Download My Resume</a>
     </div>
   </header>
 
