--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
   <!-- Header (Jumbotron) -->
   <header class="jumbotron jumbotron-fluid">
     <div class="container text-center">
+      <div class="text-bg-dark p-3">
       <h1 class="text-bg-dark p-3" class="display-4">Sophia Tamburrino</h1>
-      <p class="lead"class="text-bg-dark p-3">Software Engineer | Web Designer | Student</p>
+      <p class="lead">Software Engineer | Web Designer | Student</p>
+      </div>
       <a href="New-Current-Resume-Tamburrino.pdf" target="_blank">Download My Resume</a>
     </div>
   </header>
