--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       padding-top: 80px; /* Adjust navbar height */
     }
     .jumbotron {
-      background-image: url('https://images.unsplash.com/photo-1707175834374-18fae3215fee?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fGxpbmtlZGluJTIwYmFubmVyfGVufDB8fDB8fHww'); /* Replace with your background image */
+      background-image: url('https://marketplace.canva.com/EAENvp21inc/1/0/1600w/canva-simple-work-linkedin-banner-qt_TMRJF4m0.jpg'); /* Replace with your background image */
       background-size: cover;
       color: #fff;
       text-shadow: 2px 2px 4px #000000;
