--- a/index.html
+++ b/index.html
@@ -115,25 +115,8 @@
   <section id="contact" class="py-5">
     <div class="container">
       <h2 class="text-center mb-4">Contact Me</h2>
-      <div class="row">
-        <div class="col-md-6 mx-auto">
-          <form>
-            <div class="form-group">
-              <label for="name">Name</label>
-              <input type="text" class="form-control" id="name" required>
-            </div>
-            <div class="form-group">
-              <label for="email">Email address</label>
-              <input type="email" class="form-control" id="email" required>
-            </div>
-            <div class="form-group">
-              <label for="message">Message</label>
-              <textarea class="form-control" id="message" rows="5" required></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary btn-block">Submit</button>
-          </form>
-        </div>
-      </div>
+      <h4 class="text-center mb-4">Email: sophiatamburrino@gmail.com</h4>
+      <h4 class="text-center mb-4">LinkedIn: <a href="https://www.linkedin.com/in/sophia-tamburrino-7a8075268/">sophia-tamburrino</a></h4>
     </div>
   </section>
 
