--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   <!-- Footer -->
   <footer class="bg-dark text-white py-4">
     <div class="container text-center">
-      &copy; 2024 Your Name. All rights reserved.
+       2024 Sophia Tamburrino. All rights reserved.
     </div>
   </footer>
 
