--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="col-lg-6">
           <h2 class="mb-4">About Me</h2>
           <p></p>
-          <p>Etiam dapibus lacus nec elit pulvinar, non dictum mauris interdum.</p>
+          <p>Hello! My name is Sophia and I’m a sophomore pursuing a B.S. in Computer Science and a minor in astronomy and astrophysics at The George Washington University. I intend to obtain an internship as well as complete valuable computer science research during my time at GWU. I currently work with the GW Information Technology department as a Technical Support Assistant! I also cherish my involvement in my extracurriculars-- I currently serve as the Secretary for Women in Computer Science (WiCS), and I’m the Vice Regent of the professional engineering fraternity Theta Tau. </p>
         </div>
         <div class="col-lg-6">
           <img src="PersonalWebsite/IMG_9326.JPG" class="img-fluid rounded-circle" alt="Your Profile Picture">
