--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
         <div class="col-lg-6">
           <h2 class="mb-4">About Me</h2>
           <p></p>
-          <p>Hello! My name is Sophia and I’m a sophomore pursuing a B.S. in Computer Science and a minor in astronomy and astrophysics at The George Washington University. I intend to obtain an internship as well as complete valuable computer science research during my time at GWU. I currently work with the GW Information Technology department as a Technical Support Assistant! I also cherish my involvement in my extracurriculars-- I currently serve as the Secretary for Women in Computer Science (WiCS), and I’m the Vice Regent of the professional engineering fraternity Theta Tau. </p>
+          <p>Hello! My name is Sophia and I’m a sophomore pursuing a B.S. in Computer Science at The George Washington University. I intend to obtain an internship as well as complete valuable computer science research during my time at GWU. I currently work with the GW Information Technology department as a Technical Support Assistant! I also cherish my involvement in my extracurriculars-- I currently serve as the Secretary for Women in Computer Science (WiCS), and I’m the Vice Regent of the professional engineering fraternity Theta Tau. </p>
         </div>
-<!--         <div class="col-lg-6">
+        <div class="col-lg-1">
           <img src="IMG_9326.JPG" class="img-fluid rounded-circle" alt="Your Profile Picture">
-        </div> -->
+        </div>
       </div>
     </div>
   </section>
@@ -81,9 +81,9 @@
           <div class="card mb-4">
             <img src="portfolio-item-1.jpg" class="card-img-top" alt="Portfolio Item 1">
             <div class="card-body">
-              <h5 class="card-title">Project Title</h5>
+              <h5 class="card-title">Slot Machine</h5>
               <p class="card-text">Project description goes here.</p>
-              <a href="#" class="btn btn-primary">View Project</a>
+              <a href="https://sophia-tamburrino.github.io/SlotMachine/" class="btn btn-primary">View Project</a>
             </div>
           </div>
         </div>
