--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
           <div class="card mb-4">
             <img src="portfolio-item-2.jpg" class="card-img-top" alt="Portfolio Item 2">
             <div class="card-body">
-              <h5 class="card-title">Project Title</h5>
+              <h5 class="card-title">Die Roll + Stats</h5>
               <p class="card-text">Project description goes here.</p>
-              <a href="#" class="btn btn-primary">View Project</a>
+              <a href="https://sophia-tamburrino.github.io/die-is-cast/" class="btn btn-primary">View Project</a>
             </div>
           </div>
         </div>
