--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="container text-center">
       <div class="text-bg-dark p-3">
       <h1 class="text-bg-dark p-3" class="display-4">Sophia Tamburrino</h1>
-      <p class="lead">Software Engineer | Web Designer | Student</p>
+      <p class="lead"> Aspiring Software Engineer | Student at GWU </p>
       </div>
       <a href="New-Current-Resume-Tamburrino.pdf" target="_blank">Download My Resume</a>
     </div>
@@ -63,7 +63,7 @@
         <div class="col-lg-6">
           <h2 class="mb-4">About Me</h2>
           <p></p>
-          <p>Hello! My name is Sophia and I’m a sophomore pursuing a B.S. in Computer Science at The George Washington University. I intend to obtain an internship as well as complete valuable computer science research during my time at GWU. I currently work with the GW Information Technology department as a Technical Support Assistant! I also cherish my involvement in my extracurriculars-- I currently serve as the Secretary for Women in Computer Science (WiCS), and I’m the Vice Regent of the professional engineering fraternity Theta Tau. </p>
+          <p>Hello! My name is Sophia and I’m a sophomore pursuing a B.S. in Computer Science at The George Washington University. I currently work for GW Information Technology as a technical support assistant. I am also working as an undergraduate research assistant, developing AI that can detect banter in conversational threads. Here at GWU, I serve as the Secretary for Women in Computer Science (WiCS) and the Vice Regent for GW's professional engineering fraternity Theta Tau. As a part of the Clark Scholar's program, I have the privilege of studying abroad my Spring 2026 semester in London! My current interests include cloud computing, database management, and cybersecurity, and I hope to one day apply my skills in one of these fields!</p>
         </div>
         <div class="col-lg-2">
           <img src="IMG_9326.JPG" class="img-fluid rounded-circle" alt="Your Profile Picture">
@@ -82,7 +82,7 @@
             <img src="portfolio-item-1.jpg" class="card-img-top" alt="Portfolio Item 1">
             <div class="card-body">
               <h5 class="card-title">Slot Machine</h5>
-              <p class="card-text">Project description goes here.</p>
+              <p class="card-text">Coded in 2022.</p>
               <a href="https://sophia-tamburrino.github.io/SlotMachine/" class="btn btn-primary">View Project</a>
             </div>
           </div>
@@ -92,7 +92,7 @@
             <img src="portfolio-item-2.jpg" class="card-img-top" alt="Portfolio Item 2">
             <div class="card-body">
               <h5 class="card-title">Die Roll + Stats</h5>
-              <p class="card-text">Project description goes here.</p>
+              <p class="card-text">Coded in 2022.</p>
               <a href="https://sophia-tamburrino.github.io/die-is-cast/" class="btn btn-primary">View Project</a>
             </div>
           </div>
@@ -101,9 +101,9 @@
           <div class="card mb-4">
             <img src="portfolio-item-3.jpg" class="card-img-top" alt="Portfolio Item 3">
             <div class="card-body">
-              <h5 class="card-title">Project Title</h5>
-              <p class="card-text">Project description goes here.</p>
-              <a href="#" class="btn btn-primary">View Project</a>
+              <h5 class="card-title">NLP Project</h5>
+              <p class="card-text">Coded in 2023.</p>
+              <a href="https://github.com/sophia-tamburrino/1111-project" class="btn btn-primary">View Project</a>
             </div>
           </div>
         </div>
@@ -123,7 +123,7 @@
   <!-- Footer -->
   <footer class="bg-dark text-white py-4">
     <div class="container text-center">
-       2024 Sophia Tamburrino
+       2024
     </div>
   </footer>
 
