--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class = "text-center">
     <div class="container">
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-6 mx-auto">
          <h2 class="text-center mb-4">About Me</h2>
           <p></p>
           <p class="text-center">Hello! My name is Sophia and I’m a sophomore pursuing a B.S. in Computer Science at The George Washington University. I currently work for GW Information Technology as a technical support assistant. I am also working as an undergraduate research assistant, developing AI that can detect banter in conversational threads. Here at GWU, I serve as the Secretary for Women in Computer Science (WiCS) and the Vice Regent for GW's professional engineering fraternity Theta Tau. As a part of the Clark Scholar's program, I have the privilege of studying abroad my Spring 2026 semester in London! My current interests include cloud computing, database management, and cybersecurity, and I hope to one day apply my skills in one of these fields!</p>
