--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <h1 class="text-bg-dark p-3" class="display-4">Sophia Tamburrino</h1>
       <p class="lead"> Aspiring Software Engineer | Student at GWU </p>
       </div>
-      <a href="New-Current-Resume-Tamburrino.pdf" target="_blank">Download My Resume</a>
+      <a href="DC-resume.pdf" target="_blank">Download My Resume</a>
     </div>
   </header>
 
