--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sophia Tamburrino - Personal Website</title>
-  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <!-- Custom styles -->
   <style>
-    /* Customize styles here */
     body {
-      padding-top: 80px; /* Adjust navbar height */
+      padding-top: 80px; 
     }
     .jumbotron {
       background-image: url('https://marketplace.canva.com/EAENvp21inc/1/0/1600w/canva-simple-work-linkedin-banner-qt_TMRJF4m0.jpg'); /* Replace with your background image */
@@ -22,7 +19,6 @@
 </head>
 <body>
 
-  <!-- Navbar -->
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">Sophia Tamburrino</a>
@@ -45,7 +41,6 @@
     </div>
   </nav>
 
-  <!-- Header (Jumbotron) -->
   <header class="jumbotron jumbotron-fluid">
     <div class="container text-center">
       <div class="text-bg-dark p-3">
@@ -56,7 +51,6 @@
     </div>
   </header>
 
-  <!-- About Section -->
   <section id="about" class="py-5">
     <div class = "text-center">
     <div class="container">
@@ -71,7 +65,6 @@
     </div>
   </section>
 
-  <!-- Portfolio Section -->
   <section id="portfolio" class="bg-light py-5">
     <div class="container">
       <h2 class="text-center mb-4">Portfolio</h2>
@@ -110,7 +103,6 @@
     </div>
   </section>
 
-  <!-- Contact Section -->
   <section id="contact" class="py-5">
     <div class="container">
       <h2 class="text-center mb-4">Contact Me</h2>
@@ -119,14 +111,12 @@
     </div>
   </section>
 
-  <!-- Footer -->
   <footer class="bg-dark text-white py-4">
     <div class="container text-center">
        2024
     </div>
   </footer>
 
-  <!-- Bootstrap JS and dependencies -->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
