--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <body>
 <!--   navbar -->
-<nav class="navbar navbar-expand-lg style="background-color: ##062e1d;"">
+<nav class="navbar navbar-expand-lg" style="background-color: ##062e1d;"">
   <a class="navbar-brand link-secondary" href="#">   Sophia Tamburrino</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -24,6 +24,30 @@
     </ul>
   </div>
 </nav>
+<!--   jumbortron -->
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Fluid jumbotron</h1>
+    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+  </div>
+</div>
+<!--   container 1 -->
+  <div class="p-3 mb-2 bg-light text-dark">
+    <div class="container-lg">
+      <h4>hello testing</h4>
+    
+    </div>
+  </div>
+  <!--   container 2 -->
+   <div class="container-lg">
+     <h4>hello testing</h4>
+  
+  </div>
+  <!--   container 3 -->
+   <div class="container-lg">
+     <h4>hello testing</h4>
+  
+  </div>
 
 </body>
   </head>
