--- a/index.html
+++ b/index.html
@@ -25,30 +25,33 @@
   </div>
 </nav>
 <!--   jumbortron -->
-<div class="jumbotron jumbotron-fluid">
+<div class="jumbotron jumbotron-fluid" style="background-image: url(https://marketplace.canva.com/EAENvp21inc/1/0/1600w/canva-simple-work-linkedin-banner-qt_TMRJF4m0.jpg); background-size: 100%;">>
   <div class="container">
-    <h1 class="display-4">Fluid jumbotron</h1>
-    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+    <div class="text-center">
+    <h1 class="display-4">Sophia Tamburrino</h1>
+    <p class="lead">Student at GWU | Aspiring SWE</p>
+    </div>
   </div>
 </div>
 <!--   container 1 -->
   <div class="p-3 mb-2 bg-light text-dark">
     <div class="container-lg">
-      <h4>hello testing</h4>
-    
+      <h2>About Me</h2>
+      
     </div>
   </div>
   <!--   container 2 -->
    <div class="container-lg">
-     <h4>hello testing</h4>
+     <h2>My Portfolio</h2>
   
   </div>
   <!--   container 3 -->
+  <div class="p-3 mb-2 bg-light text-dark">
    <div class="container-lg">
-     <h4>hello testing</h4>
+     <h2>Contact Me</h2>
   
   </div>
-
+  </div>
 </body>
   </head>
 </html>
