--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
 <!--     bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <title>Sophia Tamburrino - Personal Website</title>
+  </head>
 <body>
 <!--   navbar -->
 <nav class="navbar navbar-expand-lg" style="background-color: ##062e1d;"">
@@ -53,5 +55,4 @@
   </div>
   </div>
 </body>
-  </head>
 </html>
