--- a/index.html
+++ b/index.html
@@ -38,21 +38,27 @@
 <!--   container 1 -->
   <div class="p-3 mb-2 bg-light text-dark">
     <div class="container-lg">
+      <div class="text-center">
       <h2>About Me</h2>
-      
+        <p class="text-center">Hello! My name is Sophia and I’m a sophomore pursuing a B.S. in Computer Science at The George Washington University. I currently work for GW Information Technology as a technical support assistant. I am also working as an undergraduate research assistant, developing AI that can detect banter in conversational threads. Here at GWU, I serve as the Secretary for Women in Computer Science (WiCS) and the Vice Regent for GW's professional engineering fraternity Theta Tau. As a part of the Clark Scholar's program, I have the privilege of studying abroad my Spring 2026 semester in London! My current interests include cloud computing, database management, and cybersecurity, and I hope to one day apply my skills in one of these fields!</p>
+    </div>
     </div>
   </div>
   <!--   container 2 -->
    <div class="container-lg">
+     <div class="text-center">
      <h2>My Portfolio</h2>
   
   </div>
+   </div>
   <!--   container 3 -->
   <div class="p-3 mb-2 bg-light text-dark">
    <div class="container-lg">
+     <div class="text-center">
      <h2>Contact Me</h2>
   
   </div>
+   </div>
   </div>
 </body>
 </html>
