--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 <div class="jumbotron jumbotron-fluid" style="background-image: url(https://marketplace.canva.com/EAENvp21inc/1/0/1600w/canva-simple-work-linkedin-banner-qt_TMRJF4m0.jpg); background-size: 100%;">>
   <div class="container">
     <div class="text-center">
-    <h1 class="display-4">Sophia Tamburrino</h1>
-    <p class="lead">Student at GWU | Aspiring SWE</p>
+    <h1 class="display-4 text-white">Sophia Tamburrino</h1>
+    <p class="lead text-white">Student at GWU | Aspiring SWE</p>
     </div>
   </div>
 </div>
@@ -48,15 +48,58 @@
    <div class="container-lg">
      <div class="text-center">
      <h2>My Portfolio</h2>
-  
+<!--       carousel -->
+       <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="..." class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Lottery Machine Project</h5>
+        <button type="button" class="btn btn-primary"><a href="https://sophia-tamburrino.github.io/SlotMachine/">See Project</a></button>
+        <p>Coded in 2022.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Dice Roll Stats Project</h5>
+        <button type="button" class="btn btn-primary"><a href="https://sophia-tamburrino.github.io/die-is-cast/">See Project</a></button>
+        <p>Coded in 2022.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>NLP Project</h5>
+                <button type="button" class="btn btn-primary"><a href="https://github.com/sophia-tamburrino/1111-project">See Project</a></button>
+        <p>Coded in 2023.</p>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+<!--        end carousel -->
   </div>
    </div>
   <!--   container 3 -->
   <div class="p-3 mb-2 bg-light text-dark">
    <div class="container-lg">
      <div class="text-center">
-     <h2>Contact Me</h2>
-  
+     <h2>Contact Me!</h2>
+      <b>Email:</b> sophiatamburrino@gmail.com
+       <b>LinkedIn:</b><a href="https://www.linkedin.com/in/sophia-tamburrino-7a8075268/">Click Here</a>
   </div>
    </div>
   </div>
