--- a/index.html
+++ b/index.html
@@ -60,23 +60,23 @@
       <img src="..." class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Lottery Machine Project</h5>
-        <button type="button" class="btn btn-primary"><a href="https://sophia-tamburrino.github.io/SlotMachine/">See Project</a></button>
+<!--         <button type="button" class="btn btn-primary"><a href="https://sophia-tamburrino.github.io/SlotMachine/">See Project</a></button> -->
         <p>Coded in 2022.</p>
       </div>
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item active">
       <img src="..." class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Dice Roll Stats Project</h5>
-        <button type="button" class="btn btn-primary"><a href="https://sophia-tamburrino.github.io/die-is-cast/">See Project</a></button>
+<!--         <button type="button" class="btn btn-primary"><a href="https://sophia-tamburrino.github.io/die-is-cast/">See Project</a></button> -->
         <p>Coded in 2022.</p>
       </div>
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item active">
       <img src="..." class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>NLP Project</h5>
-                <button type="button" class="btn btn-primary"><a href="https://github.com/sophia-tamburrino/1111-project">See Project</a></button>
+<!--                 <button type="button" class="btn btn-primary"><a href="https://github.com/sophia-tamburrino/1111-project">See Project</a></button> -->
         <p>Coded in 2023.</p>
       </div>
     </div>
