--- a/index.html
+++ b/index.html
@@ -57,26 +57,26 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="https://t3.ftcdn.net/jpg/02/98/47/38/360_F_298473896_Vsz21xTwMtroEeeGgU8pL2vwt3N65pfR.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Lottery Machine Project</h5>
-<!--         <button type="button" class="btn btn-primary"><a href="https://sophia-tamburrino.github.io/SlotMachine/">See Project</a></button> -->
+        <button type="button" class="btn btn-primary"><a href="https://sophia-tamburrino.github.io/SlotMachine/">See Project</a></button>
         <p>Coded in 2022.</p>
       </div>
     </div>
     <div class="carousel-item active">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="https://t3.ftcdn.net/jpg/02/98/47/38/360_F_298473896_Vsz21xTwMtroEeeGgU8pL2vwt3N65pfR.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Dice Roll Stats Project</h5>
-<!--         <button type="button" class="btn btn-primary"><a href="https://sophia-tamburrino.github.io/die-is-cast/">See Project</a></button> -->
+        <button type="button" class="btn btn-primary"><a href="https://sophia-tamburrino.github.io/die-is-cast/">See Project</a></button>
         <p>Coded in 2022.</p>
       </div>
     </div>
     <div class="carousel-item active">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="https://t3.ftcdn.net/jpg/02/98/47/38/360_F_298473896_Vsz21xTwMtroEeeGgU8pL2vwt3N65pfR.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>NLP Project</h5>
-<!--                 <button type="button" class="btn btn-primary"><a href="https://github.com/sophia-tamburrino/1111-project">See Project</a></button> -->
+                <button type="button" class="btn btn-primary"><a href="https://github.com/sophia-tamburrino/1111-project">See Project</a></button>
         <p>Coded in 2023.</p>
       </div>
     </div>
@@ -96,29 +96,8 @@
    <div class="container-lg">
      <div class="text-center">
      <h2>Contact Me!</h2>
-      <b>Email:</b> sophiatamburrino@gmail.com
+      <b>Email:</b> sophiatamburrino@gmail.com <b></b>
        <b>LinkedIn:</b><a href="https://www.linkedin.com/in/sophia-tamburrino-7a8075268/">Click Here</a>
-       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="..." class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
   </div>
    </div>
   </div>
