--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
       <img src="https://t3.ftcdn.net/jpg/02/98/47/38/360_F_298473896_Vsz21xTwMtroEeeGgU8pL2vwt3N65pfR.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Lottery Machine Project</h5>
-        <button type="button" class="btn btn-primary"><a href="https://sophia-tamburrino.github.io/SlotMachine/">See Project</a></button>
+        <button type="button" class="btn btn-primary" onclick="location.href='https://sophia-tamburrino.github.io/SlotMachine/';">See Project</button>
         <p>Coded in 2022.</p>
       </div>
     </div>
-    <div class="carousel-item active">
+    <div class="carousel-item">
       <img src="https://t3.ftcdn.net/jpg/02/98/47/38/360_F_298473896_Vsz21xTwMtroEeeGgU8pL2vwt3N65pfR.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Dice Roll Stats Project</h5>
@@ -72,7 +72,7 @@
         <p>Coded in 2022.</p>
       </div>
     </div>
-    <div class="carousel-item active">
+    <div class="carousel-item">
       <img src="https://t3.ftcdn.net/jpg/02/98/47/38/360_F_298473896_Vsz21xTwMtroEeeGgU8pL2vwt3N65pfR.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>NLP Project</h5>
