--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-<!--     bootstrap -->
+<!--     bootstrap+popper -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <title>Sophia Tamburrino - Personal Website</title>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-qEXg4fxkRg8Zr+H0G+HzskYe5xIEm4LVURyHAz8wA7U5B4e4UVoqewFAvepX2pVI" crossorigin="anonymous"></script>
+    <title>Sophia Tamburrino - Personal Website</title>
   </head>
 <body>
 <!--   navbar -->
@@ -68,7 +69,7 @@
       <img src="https://t3.ftcdn.net/jpg/02/98/47/38/360_F_298473896_Vsz21xTwMtroEeeGgU8pL2vwt3N65pfR.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Dice Roll Stats Project</h5>
-        <button type="button" class="btn btn-primary"><a href="https://sophia-tamburrino.github.io/die-is-cast/">See Project</a></button>
+        <button type="button" class="btn btn-primary" onclick="location.href='https://sophia-tamburrino.github.io/die-is-cast/';">See Project</button>
         <p>Coded in 2022.</p>
       </div>
     </div>
@@ -76,7 +77,7 @@
       <img src="https://t3.ftcdn.net/jpg/02/98/47/38/360_F_298473896_Vsz21xTwMtroEeeGgU8pL2vwt3N65pfR.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>NLP Project</h5>
-                <button type="button" class="btn btn-primary"><a href="https://github.com/sophia-tamburrino/1111-project">See Project</a></button>
+                <button type="button" class="btn btn-primary" onclick="location.href='https://github.com/sophia-tamburrino/1111-project';">See Project</button>
         <p>Coded in 2023.</p>
       </div>
     </div>
