--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </div>
 </nav>
 <!--   jumbortron -->
-<div class="jumbotron jumbotron-fluid" style="background-image: url(https://marketplace.canva.com/EAENvp21inc/1/0/1600w/canva-simple-work-linkedin-banner-qt_TMRJF4m0.jpg); background-size: 100%;">>
+<div class="jumbotron jumbotron-fluid" style="background-image: url(https://marketplace.canva.com/EAENvp21inc/1/0/1600w/canva-simple-work-linkedin-banner-qt_TMRJF4m0.jpg); background-size: 100%; height: 600px;">>
   <div class="container">
     <div class="text-center">
     <h1 class="display-4 text-white">Sophia Tamburrino</h1>
@@ -40,23 +40,30 @@
   <div class="p-3 mb-2 bg-light text-dark">
     <div class="container-lg">
       <div class="text-center">
-      <h2>About Me</h2>
+      <h2>About Me</h2> <br>
         <p class="text-center">Hello! My name is Sophia and I’m a sophomore pursuing a B.S. in Computer Science at The George Washington University. I currently work for GW Information Technology as a technical support assistant. I am also working as an undergraduate research assistant, developing AI that can detect banter in conversational threads. Here at GWU, I serve as the Secretary for Women in Computer Science (WiCS) and the Vice Regent for GW's professional engineering fraternity Theta Tau. As a part of the Clark Scholar's program, I have the privilege of studying abroad my Spring 2026 semester in London! My current interests include cloud computing, database management, and cybersecurity, and I hope to one day apply my skills in one of these fields!</p>
     </div>
     </div>
   </div>
   <!--   container 2 -->
+  <div class="container-lg">
      <div class="text-center">
      <h2>My Portfolio</h2>
          </div>
 <!--       carousel -->
        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+         <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="https://t3.ftcdn.net/jpg/02/98/47/38/360_F_298473896_Vsz21xTwMtroEeeGgU8pL2vwt3N65pfR.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Lottery Machine Project</h5>
         <button type="button" class="btn btn-primary" onclick="location.href='https://sophia-tamburrino.github.io/SlotMachine/';">See Project</button>
+        <br>
         <p>Coded in 2022.</p>
       </div>
     </div>
@@ -65,6 +72,7 @@
       <div class="carousel-caption d-none d-md-block">
         <h5>Dice Roll Stats Project</h5>
         <button type="button" class="btn btn-primary" onclick="location.href='https://sophia-tamburrino.github.io/die-is-cast/';">See Project</button>
+        <br>
         <p>Coded in 2022.</p>
       </div>
     </div>
@@ -73,6 +81,7 @@
       <div class="carousel-caption d-none d-md-block">
         <h5>NLP Project</h5>
                 <button type="button" class="btn btn-primary" onclick="location.href='https://github.com/sophia-tamburrino/1111-project';">See Project</button>
+        <br>
         <p>Coded in 2023.</p>
       </div>
     </div>
@@ -87,12 +96,14 @@
   </button>
 </div>
 <!--        end carousel -->
+  </div>
   <!--   container 3 -->
   <div class="p-3 mb-2 bg-light text-dark">
    <div class="container-lg">
      <div class="text-center">
      <h2>Contact Me!</h2>
-      <b>Email:</b> sophiatamburrino@gmail.com <b></b>
+      <b>Email:</b> sophiatamburrino@gmail.com 
+       <br>
        <b>LinkedIn:</b><a href="https://www.linkedin.com/in/sophia-tamburrino-7a8075268/">Click Here</a>
   </div>
    </div>
