--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 <body>
 <!--   navbar -->
-<nav class="navbar navbar-expand-lg" style="background-color: ##062e1d;"">
+<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
   <a class="navbar-brand link-secondary" href="#">   Sophia Tamburrino</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -28,7 +28,7 @@
   </div>
 </nav>
 <!--   jumbortron -->
-<div class="jumbotron jumbotron-fluid" style="background-image: url(https://marketplace.canva.com/EAENvp21inc/1/0/1600w/canva-simple-work-linkedin-banner-qt_TMRJF4m0.jpg); background-size: 100%; height: 600px;">>
+<div class="jumbotron jumbotron-fluid" style="background-image: url(https://marketplace.canva.com/EAENvp21inc/1/0/1600w/canva-simple-work-linkedin-banner-qt_TMRJF4m0.jpg); background-size: 100%; height: 250px;">>
   <div class="container">
     <div class="text-center">
     <h1 class="display-4 text-white">Sophia Tamburrino</h1>
@@ -49,6 +49,7 @@
   <div class="container-lg">
      <div class="text-center">
      <h2>My Portfolio</h2>
+       <br>
          </div>
 <!--       carousel -->
        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -104,7 +105,7 @@
      <h2>Contact Me!</h2>
       <b>Email:</b> sophiatamburrino@gmail.com 
        <br>
-       <b>LinkedIn:</b><a href="https://www.linkedin.com/in/sophia-tamburrino-7a8075268/">Click Here</a>
+       <b>LinkedIn: </b><a href="https://www.linkedin.com/in/sophia-tamburrino-7a8075268/">Sophia Tamburrino</a>
   </div>
    </div>
   </div>
