--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 <body>
 <!--   navbar -->
-<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+<nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #e3f2fd;">
   <a class="navbar-brand link-secondary" href="#">   Sophia Tamburrino</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
