--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="https://t3.ftcdn.net/jpg/02/98/47/38/360_F_298473896_Vsz21xTwMtroEeeGgU8pL2vwt3N65pfR.jpg" class="d-block w-100" alt="...">
+      <img src="slot_machine_img.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Lottery Machine Project</h5>
         <button type="button" class="btn btn-primary" onclick="location.href='https://sophia-tamburrino.github.io/SlotMachine/';">See Project</button>
@@ -69,7 +69,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://t3.ftcdn.net/jpg/02/98/47/38/360_F_298473896_Vsz21xTwMtroEeeGgU8pL2vwt3N65pfR.jpg" class="d-block w-100" alt="...">
+      <img src="die_roll_img.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Dice Roll Stats Project</h5>
         <button type="button" class="btn btn-primary" onclick="location.href='https://sophia-tamburrino.github.io/die-is-cast/';">See Project</button>
