--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="die_roll_img.png" class="d-block w-100" alt="...">
+      <img src="https://adviksinghania.github.io/diceroll-visualization/dice.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Dice Roll Stats Project</h5>
         <button type="button" class="btn btn-primary" onclick="location.href='https://sophia-tamburrino.github.io/die-is-cast/';">See Project</button>
@@ -108,9 +108,17 @@
       <b>Email:</b> sophiatamburrino@gmail.com 
        <br>
        <b>LinkedIn: </b><a href="https://www.linkedin.com/in/sophia-tamburrino-7a8075268/">Sophia Tamburrino</a>
-       <br>
+       <br><br>
   </div>
    </div>
   </div>
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <div class="col-md-4 d-flex align-items-center">
+      <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+        <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+      </a>
+      <span class="mb-3 mb-md-0 text-body-secondary">© 2024 Sophia Tamburrino</span>
+    </div>
+  </footer>
 </body>
 </html>
