--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://t3.ftcdn.net/jpg/02/98/47/38/360_F_298473896_Vsz21xTwMtroEeeGgU8pL2vwt3N65pfR.jpg" class="d-block w-100" alt="...">
+      <img src="Untitled design (2).png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>NLP Project</h5>
                 <button type="button" class="btn btn-primary" onclick="location.href='https://github.com/sophia-tamburrino/1111-project';">See Project</button>
