--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       <li class="nav-item">
         <a class="nav-link link-secondary" href="#Contact Me">Contact Me</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link link-secondary" href="DC-resume.pdf"> Download Resume</a>
+      </li>
     </ul>
   </div>
 </nav>
