--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a class="nav-link link-secondary" href="#Contact Me">Contact Me</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link link-secondary" href="DC-resume.pdf"> Download Resume</a>
+        <a class="nav-link link-secondary" href="Current-Resume (1).pdf"> Download Resume</a>
       </li>
     </ul>
   </div>
